# seenflix-backend

./: .gitignore  Dockerfile  ER.drawio  README.md  hello.py  package-lock.json  package.json  pyproject.toml  serverless.yml  start_local.sh  todo.txt
cron/: imdb_id_backup.py
fargate_tasks/: load_db.py
imdb_backups/: series_backup.csv
lambda_functions/: add_entry.py  common.py  constants.py  delete_entry.py  engine.py  get_recommendations.py  get_watchlist.py  imdb_cron_loader.py  imdb_id_backup.py  load_db.py  search_media.py
models/: sa_models.py
