[project]
name = "seenflix-backend"
version = "0.1.0"
description = "Dependencies for seenflix backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.99",
    "dotenv>=0.9.9",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "ruff>=0.9.0",
    "sqlalchemy>=2.0.38",
]
